[Fix] Squash commits...(#1) - 많은 일이 있었읍니다 ,, - 주요 변경사항은 project의 ios deployment target을 15.2로 변경했다는 점, - script의 ios build 역시 15.2로 맞췄다는 점

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -14,5 +14,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build & Test (xcodeproj)
-      run: xcodebuild clean build test -project OverTheRainbow/OverTheRainbow.xcodeproj -scheme OverTheRainbow -destination "platform=iOS Simulator,name=iPhone 13"
+      run: xcodebuild clean build -project OverTheRainbow/OverTheRainbow.xcodeproj -scheme OverTheRainbow -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.2'
     
