[Chore] CocoaPods github action 세팅 (#14) - pod install 추가 ㄹ - project 대신 workspace build

--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -13,6 +13,12 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
+    - name: CocoaPod Install
+      run: |
+        pod install
     - name: Build & Test (xcodeproj)
-      run: xcodebuild clean build -project OverTheRainbow/OverTheRainbow.xcodeproj -scheme OverTheRainbow -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.2'
+      run: |
+        xcodebuild clean build \
+        -workspace OverTheRainbow/OverTheRainbow.xcworkspace \
+        -scheme OverTheRainbow -destination 'platform=iOS Simulator,name=iPhone 13,OS=15.2'
     
