--- a/.github/workflows/CI_Dev.yml
+++ b/.github/workflows/CI_Dev.yml
@@ -15,6 +15,7 @@ jobs:
     - uses: actions/checkout@v3
     - name: CocoaPod Install
       run: |
+        cd ./OverTheRainbow
         pod install
     - name: Build & Test (xcodeproj)
       run: |
