--- a/OverTheRainbow/OverTheRainbow.xcodeproj/xcshareddata/xcschemes/OverTheRainbow.xcscheme
+++ b/OverTheRainbow/OverTheRainbow.xcodeproj/xcshareddata/xcschemes/OverTheRainbow.xcscheme
@@ -20,6 +20,20 @@
                ReferencedContainer = "container:OverTheRainbow.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
+         <BuildActionEntry
+            buildForTesting = "YES"
+            buildForRunning = "NO"
+            buildForProfiling = "NO"
+            buildForArchiving = "NO"
+            buildForAnalyzing = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A86EE30D288788E400084E98"
+               BuildableName = "OverTheRainbowTests.xctest"
+               BlueprintName = "OverTheRainbowTests"
+               ReferencedContainer = "container:OverTheRainbow.xcodeproj">
+            </BuildableReference>
+         </BuildActionEntry>
       </BuildActionEntries>
    </BuildAction>
    <TestAction
@@ -33,6 +47,18 @@
             default = "YES">
          </TestPlanReference>
       </TestPlans>
+      <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "A86EE30D288788E400084E98"
+               BuildableName = "OverTheRainbowTests.xctest"
+               BlueprintName = "OverTheRainbowTests"
+               ReferencedContainer = "container:OverTheRainbow.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+      </Testables>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
