--- a/OverTheRainbow/OverTheRainbow/Info.plist
+++ b/OverTheRainbow/OverTheRainbow/Info.plist
@@ -16,7 +16,7 @@
 					<key>UISceneDelegateClassName</key>
 					<string>$(PRODUCT_MODULE_NAME).SceneDelegate</string>
 					<key>UISceneStoryboardFile</key>
-					<string>MainViewTemporary</string>
+					<string>MainView</string>
 				</dict>
 			</array>
 		</dict>
